--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,11 @@
 body{        
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(83, 15, 15);
     border: 75px solid #e8002a;
     margin: 0; 
     padding: 0; 
     height: 100vh; 
     display: grid;
+
   }
   div{
     background-color: black;
@@ -23,6 +24,26 @@ body{
   .imagens{
     text-align: center;
   }
-  .imagem{
+  .imagem{    
+    height: 145px;
+    background-image: url('imagens/pngegg.png');
+    background-repeat:no-repeat ;    
+    background-size: 100px;
+    margin-left: -30px;
+    background-color: transparent;
+  }
+  .imagem:hover{
+    background-image: url('imagens/pngegg\ -\ Copia.png');
+    background-repeat:no-repeat ;    
+    background-size: 100px;
+  }
+  .imagem img{
     text-align: initial;
+ 
+  }
+  
+  .imagem img:hover{
+    
+    src:url(imagens/pngegg.png);
+    
   }
